Fix alignment of media

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -323,20 +323,29 @@ span.rss-date {
   margin: 10px;
 }
 
-.books-list {
-  grid-column: 1/3;
-  grid-row: 3;
-  /* display: block; */
-}
-
 .media-meta {
   display: grid;
   margin: 30px auto;
+  grid-gap: 10px;
+  align-items: start;
+}
+
+.books-list {
+  grid-column: 1/2;
+  grid-row: 1;
+  @include breakpoint('mini') {
+    grid-column: 1/4;
+    grid-row: 1;
+  }
 }
 
 .movies-list {
-  grid-column: 3/5;
-  grid-row: 3;
+  grid-column: 3/4;
+  grid-row: 1;
+  @include breakpoint('mini') {
+    grid-column: 1/4;
+    grid-row: 2;
+  }
 }
 
 .books-list-head, .movies-list-head {
